--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ p{
     background-repeat: no-repeat;
     background-position: left;
 }
+.exp-area h1{
+    text-align: center;
+    font-size: 30px;
+}
 section{
     height: 500px;
     padding-bottom: 50px;
